# aluraDjango

./: pyproject.toml
alurareceita/: settings.py  urls.py
receitas/: views.py
receitas/templates/: base.html  index.html  receita.html
